--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "buffer": "^6.0.3",
+    "lottie-web": "^5.11.0",
     "pako": "^2.1.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
+    "react-bodymovin": "^2.0.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
